# Dissertation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/Projects/Sign_Languauge_Recognition/: DataPair.py  Recognition.py  concept_maps.py  config.py  crop_dgs.py  dataset_builder.py  extract_video.py  main.py  ml_core.py  split_annotate_video.py  videos.json  videos_all_languages.json  videos_bsl.json  videos_dgs.json  videos_gsl.json
src/Projects/Sign_Languauge_Recognition/ML/: Data.IPYNB  Linguistic_analysis.IPYNB  config.py  data_pipeline.py  decoding.py  evaluate.py  losses.py  metrics.py  model.py  model_cnn_lstm.py  model_cnn_seq2seq.py  run_ctc_eval.py  run_eval.py  run_eval_cnn_lstm.py  run_eval_cnn_seq2seq.py  run_eval_ctc.py  train.py  train_cnn_lstm.py  train_cnn_seq2seq.py  train_ctc.py  train_lm.py  utils.py
