[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "moviepy>=2.2.1",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]
