[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "levenshtein>=0.27.3",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "moviepy>=2.2.1",
    "nltk>=3.9.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
]
